# VirtueMissionSolver

./: .gitattributes  .gitignore  LICENSE  README.md  build.ps1  pyproject.toml  requirements.txt  setup.ps1  setup.sh  virtue_mission_solver.spec
.github/workflows/: release.yml  update-data.yml
FetchData/: DataFetchConfig.md  DataFetchConfig.yaml  FetchAllShipData.py  FetchShipData.py  README.md  egginc_data_All.json  egginc_data_User.csv  egginc_data_verified_references.csv  new_drops.json  requirements.txt  sortJSONAlltoCSV.py
Solver/: DefaultUserConfig.yaml  README.md  __init__.py  aliases.py  bom.py  cache.py  config.py  drop_data.py  gui_app.py  mission_data.py  mission_solver.py  resources.py  run_solver.py  solution_store.py  solver_logging.py  statistical_significance.py
Solver/gui/: __init__.py  main_window.py
Solver/gui/widgets/: __init__.py  artifact_categories.py  artifact_table.py  artifact_weights.py  constraints.py  cost_weights.py  epic_research.py  mission_list.py  results.py  ship_config.py  solution_history.py
Solver/tests/: __init__.py  test_bom.py  test_capacity.py  test_mission_drops.py  test_solver_scenarios.py  test_statistical_significance.py
Wasmegg/: eiafx-config.schema.json  mission-fuels.json  mission-fuels.schema.json
app_data/: README.md
scripts/: get_ingredients.py
